# FormulaLLMPY

./: pyproject.toml
examples/: formula.ipynb  groupchat.ipynb  only_fixer.ipynb  test.ipynb  test2.ipynb  test3.ipynb  tool_use.ipynb
examples/data/: MappingExample.4ml
examples/prompts/: SymbolicMax_bad_logic.txt  battery_bad_pm.txt  mapping_bad_constraints.txt  mapping_bad_pm.txt  mapping_bad_syntax.txt  processor_bad_pm.txt  recursion_bad_constraints.txt  simple.txt  simpleOLP2_bad_constraints.txt  simpleOLP_bad_constraints.txt  simpleUnsat_bad_constraints.txt  symbolicAndAll_bad_pm.txt  type_declaration_errors.txt
formulallm/agents/: __init__.py  executor_agent.ipynb  executor_agent.py  fixer_agent.ipynb  fixer_agent.py  interpreter_agent.ipynb  interpreter_agent.py  planner_agent.py  userproxy_agent.ipynb  userproxy_agent.py
formulallm/formula/: formula_program.py
formulallm/pipelines/: __init__.py  pipelines.py
scripts/: host_llama3.sh
